--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,6 +25,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      # Run automatically against main sweeeep board
+      # Run against custom board if manually triggered
       - name: Set variables
         id: vars
         run: |
@@ -66,7 +68,7 @@ jobs:
                       -kb ${{ env.keyboard }}
 
       - name: Upload UF2 artifact
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: "firmware-${{ env.branch }}-${{ env.keyboard_name }}-${{ env.keymap }}"
           path: "*.uf2"
